Fix vertical alignment of 3rd-party service's title on the login form

--- a/src/less/blocks/form.less
+++ b/src/less/blocks/form.less
@@ -94,7 +94,12 @@
       width: 32px;
       height: 32px;
     }
-    
+
+    > span {
+      display: flex;
+      align-items: center;
+    }
+
     &--theme {
       // use with 'm' icon size
       &_paper {
